--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,19 +9,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- BOOTSTRAP -->
+    <!-- In your base.html -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
+    <div class="wrapper" style="min-height: 92vh;">
+        {% block header %}
 
 
-    {% block header %}
-    {% endblock %}
+        {% endblock %}
+        {% include 'includes/header_logo.html' %}
+        <!-- {% include 'includes/navbar.html' %} -->
 
-    {% block content %}
-    {% endblock %}
-
+        {% block content %}
+        {% endblock %}
+    </div>
     <footer>
-
+        {% include 'includes/footer.html' %}
     </footer>
 
 </body>
