--- a/WhatsOnCApp/templates/listView.html
+++ b/WhatsOnCApp/templates/listView.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block content %}
-
 <h3>list view</h3>
-
+<img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1749127668/WhatsOnC-NCI/logoNoBG_y38bbq.png">
 {% endblock %}
