Add Category and Event Post
Add form for events and register in form.py for widgets
Fix in DB to take the category from its model
View add eventForm functionality, and refactor code to auto fill fields where needed like user
Templates set the render for the forms with crispy

--- a/WhatsOnCApp/templates/eventsForm.html
+++ b/WhatsOnCApp/templates/eventsForm.html
@@ -5,15 +5,15 @@
 {% endblock %}
 
 {% block content %}
-<h3>provider form</h3>
+<h3>event form</h3>
 
 <div style="width: 80vw; margin-left: 10%;">
 
     <form method="POST" id="" enctype="multipart/form-data">
         {% csrf_token %}
 
-        {{ formP | crispy }}
-        {{ formI | crispy }}
+        {{ formE | crispy }}
+        {{ formIE | crispy }}
 
         <button type="submit">Save</button>
 
