CalendarView change in initial view to list

--- a/WhatsOnCApp/templates/listView.html
+++ b/WhatsOnCApp/templates/listView.html
@@ -42,7 +42,7 @@
                 center: 'title',
                 right: 'dayGridMonth,timeGridWeek,timeGridDay'
             },
-            initialView: 'timeGridWeek',
+            initialView: 'listWeek',
             // defines the slots time to be displayed in the calendar
             slotMinTime: '08:00:00',
             slotMaxTime: '20:00:00',
