--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,11 +9,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    {% block head %}
+    {% endblock %}
+
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png'%}">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest'%}">
+
     <!-- BOOTSTRAP -->
-    <!-- In your base.html -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
+    <!-- FONTAWSOME -->
+    <script src="https://kit.fontawesome.com/f84495756a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,7 +35,6 @@
 
         {% endblock %}
         {% include 'includes/header_logo.html' %}
-        <!-- {% include 'includes/navbar.html' %} -->
 
         {% block content %}
         {% endblock %}
@@ -31,6 +42,8 @@
     <footer>
         {% include 'includes/footer.html' %}
     </footer>
+    {% block scripts %}{% endblock %}
+</body>
 
 </body>
 
