--- a/Templates/includes/header_logo.html
+++ b/Templates/includes/header_logo.html
@@ -1,11 +1,21 @@
-<div class="d-flex flex-row justify-content-between">
-    <div><img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1749127668/WhatsOnC-NCI/logoNoBG_y38bbq.png"
-            width="60" height="60" alt="logo"></div>
-    <div>{% include 'includes/navbar.html' %}</div>
-    <h2>{{ user.username }}</h2>
-    {% if user.is_authenticated and user.provider.approved %}
-    <h3>Approved Provider</h3>
-    {% else %}
-    <h3>Not approved or not a provider</h3>
-    {% endif %}
+<div id="headerLogo">
+    <div><a href="{% url 'WhatsOnCApp:home' %}"> <img id="logo"
+                src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1749127668/WhatsOnC-NCI/logoNoBG_y38bbq.png"
+                width="85px" height="85px" alt="logo"></a></div>
+    <div>
+        <div>
+            <h2 class="d-flex justify-content-end align-content-center">{% if user.is_authenticated %} <i
+                    class="fas fa-user"></i>
+
+                {{ user.username }}
+
+                {% if user.provider.approved %}
+                Provider
+                {% endif %}
+                {% else %} <i class="fas fa-user-slash"></i> {% endif %}
+            </h2>
+
+            {% include 'includes/navbar.html' %}
+        </div>
+    </div>
 </div>
