--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,7 +5,42 @@
 {% endblock %}
 
 {% block content %}
+<div id="indexPage">
+    <br>
+    <h2>Welcome to WhatsOnCommunity <br></h2>
+    <h4> your trusted hub for local family fun!</h4>
 
-<h3>index</h3>
+    <div class="image-stack ">
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149476/young-kids-rehearsing-play-perform-theatre-stage_zvtcva.jpg"
+            alt="Pic 1" />
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149487/rear-view-man-using-paddle-kayaking_mh0v2i.jpg"
+            alt="Pic 2" />
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149493/full-shot-happy-kids-with-medals_hqkv1p.jpg"
+            alt="Pic 3" />
 
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150445/cute-family-playing-summer-field_iy8dzj.jpg"
+            alt="Pic 3" />
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150445/children-playing-soccer-sunny-day_elyzqh.jpg"
+            alt="Pic 3" /> <img
+            src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150431/full-shot-children-learning-ride-horses_dbnxyr.jpg"
+            alt="Pic 3" /> <img
+            src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150427/top-view-children-studying-floor-library_lvck0m.jpg"
+            alt="Pic 3" />
+    </div>
+    <small class="image-stack justify-content-end mb-5">Images from <a
+            href="www.freepik.com">www.freepik.com</a></small>
+
+    <p id="indexP" class="mt-3">Our platform connects families with verified providers offering activities for children
+        and
+        communities in your
+        area.
+        Whether it's sports, arts, education, or weekend events, find it all in one place.
+        Providers can register and share their upcoming activities quickly and securely.
+        Each provider is verified to ensure a safe and reliable experience for families.
+        Easily search by location, age group, or activity type to find the right fit.<br>
+        Stay informed about what's happening around you with real-time updates.
+        Built with the community in mind, WhatsOnCommunity promotes active, local engagement.
+        Encouraging fun, learning, and connection for all families.<br>
+        Join us and discover what’s on in your community today!</p>
+</div>
 {% endblock %}
