--- a/Templates/base.html
+++ b/Templates/base.html
@@ -25,11 +25,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- FONTAWSOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <script src="https://kit.fontawesome.com/f84495756a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="wrapper" style="min-height: 92vh;">
+    <div class="wrapper" style="min-height: 92vh; max-width: 98vw;">
         {% block header %}
 
 
