--- a/CommunityApp/templates/providerProfile.html
+++ b/CommunityApp/templates/providerProfile.html
@@ -6,6 +6,63 @@
 
 {% block content %}
 
-<h3>providers form</h3>
+<h3>providers profile</h3>
 
+<div>
+    {% if provider_imgs %}
+    {% for img in provider_imgs %}
+    <div class="eventSDiv ">
+        <img src="{{img.image.url}}" alt="{{ provider.name }}" id="eventImageCss">
+        <p>{{ image.id}}</p>
+
+    </div>
+
+    {% endfor%}
+    {% endif %}
+
+</div>
+<div>
+    <table>
+        <tr>
+            <td>
+                Name </td>
+            <td> : </td>
+            <td class="ps-3"> {{ provider.name}}
+            </td>
+        </tr>
+        <tr>
+            <td>Phone</td>
+            <td> : </td>
+            <td class="ps-3"> {{ provider.phone}}
+            </td>
+        </tr>
+        <tr>
+            <td>Email </td>
+            <td> : </td>
+            <td class="ps-3"> {{ provider.email}}
+            </td>
+        </tr>
+        <tr>
+            <td>Location</td>
+            <td> : </td>
+            <td class="ps-3"> {{ provider.location}}
+            </td>
+        </tr>
+        <tr>
+            <td>VCode</td>
+            <td> : </td>
+            <td class="ps-3"> {{ provider.vcode}}
+            </td>
+        </tr>
+        <tr>
+            <td>Description</td>
+            <td> : </td>
+            <td class="ps-3">
+                {{ provider.description}}
+
+            </td>
+        </tr>
+    </table>
+</div>
+</div>
 {% endblock %}
