--- a/Templates/allauth/account/login.html
+++ b/Templates/allauth/account/login.html
@@ -1,4 +1,6 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_tags %}
+
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -33,15 +35,15 @@
   <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
 </p>
 {% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
-
+<div class="allauth-wrapper">
+  <form class="login" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    {{ form| crispy }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    <button class="primaryAction btnStyle" type="submit">{% trans "Sign In" %}</button>
+  </form>
+</div>
 {% endblock %}
