--- a/Templates/allauth/account/logout.html
+++ b/Templates/allauth/account/logout.html
@@ -1,4 +1,6 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_tags %}
+
 
 {% load i18n %}
 
@@ -8,14 +10,15 @@
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="allauth-wrapper" style="justify-items: center;">
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <button class="btnStyle" type="submit">{% trans 'Sign Out' %}</button>
+  </form>
+</div>
 
 {% endblock %}
