--- a/Templates/allauth/account/signup.html
+++ b/Templates/allauth/account/signup.html
@@ -1,4 +1,6 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_tags %}
+
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -10,14 +12,14 @@
 <h1>{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
+<div class="allauth-wrapper">
+  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    {% csrf_token %}
+    {{ form| crispy }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <button class="btnStyle" type="submit">{% trans "Sign Up" %} </button>
+  </form>
+</div>
 {% endblock %}
