Landing Page: Add lazy load to imgs

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -12,20 +12,19 @@
 
     <div class="image-stack ">
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149476/young-kids-rehearsing-play-perform-theatre-stage_zvtcva.jpg"
-            alt="Pic 1" />
+            alt="Pic 1" loading="lazy" />
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149487/rear-view-man-using-paddle-kayaking_mh0v2i.jpg"
-            alt="Pic 2" />
+            alt="Pic 2" loading="lazy" />
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752149493/full-shot-happy-kids-with-medals_hqkv1p.jpg"
-            alt="Pic 3" />
-
+            alt="Pic 3" loading="lazy" />
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150445/cute-family-playing-summer-field_iy8dzj.jpg"
-            alt="Pic 3" />
+            alt="Pic 3" loading="lazy" />
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150445/children-playing-soccer-sunny-day_elyzqh.jpg"
-            alt="Pic 3" /> <img
-            src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150431/full-shot-children-learning-ride-horses_dbnxyr.jpg"
-            alt="Pic 3" /> <img
-            src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150427/top-view-children-studying-floor-library_lvck0m.jpg"
-            alt="Pic 3" />
+            alt="Pic 3" loading="lazy" />
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150431/full-shot-children-learning-ride-horses_dbnxyr.jpg"
+            alt="Pic 3" loading="lazy" />
+        <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150427/top-view-children-studying-floor-library_lvck0m.jpg"
+            alt="Pic 3" loading="lazy" />
     </div>
     <small class="image-stack justify-content-end mb-5">Images from <a
             href="www.freepik.com">www.freepik.com</a></small>
