--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,9 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- META DESCRIPTION -->
+    <meta name="description"
+        content="Discover children's events and activities in your area with WhatsOnCommunity Hub!">
 
-    {% block head %}
-    {% endblock %}
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="children's events, family activities, kids workshops, community events, West Clare">
+
+    <!-- AUTHOR -->
+    <meta name="author" content="WhatsOnCommunity Hub Team">
 
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
@@ -28,6 +34,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <script src="https://kit.fontawesome.com/f84495756a.js" crossorigin="anonymous"></script>
+
+    {% block head %}
+    {% endblock %}
+
 </head>
 
 <body>
